@@ -25,11 +25,12 @@
 
 			if (ed.getParam('nonbreaking_force_tab')) {
 				ed.onKeyDown.add(function(ed, e) {
-					if (tinymce.isIE && e.keyCode == 9) {
+					if (e.keyCode == 9) {
+						e.preventDefault();
+	
 						ed.execCommand('mceNonBreaking');
 						ed.execCommand('mceNonBreaking');
 						ed.execCommand('mceNonBreaking');
-						tinymce.dom.Event.cancel(e);
 					}
 				});
 			}
